--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -1,3 +1,35 @@
-@app.route("/rapport/")
-def mongraphique():
-    return render_template("graphic.html")
+<html>
+  <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {packages:["orgchart"]});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Nom');
+        data.addColumn('string', 'Manager');
+        data.addColumn('string', 'Aide');
+
+        data.addRows([
+          [{'v':'Victor', 'f':'Victor<div style="color:red; font-style:italic">Roi du pétrole</div>'},
+           '', 'Roi du pétrole'],
+          [{'v':'Tom le Zer', 'f':'Tom le Zer<div style="color:blue; font-style:italic">Roi des femmes</div>'},
+           'victor', 'Roi des femmes'],
+          ['Stanislas', 'Victor', ''],
+          ['Bob', 'Jim', 'Bob Sponge'],
+          ['Carol', 'Bob', '']
+        ]);
+
+        // Create the chart.
+        var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
+        // Draw the chart, setting the allowHtml option to true for the tooltips.
+        chart.draw(data, {'allowHtml':true});
+      }
+   </script>
+    </head>
+  <body>
+    <div id="chart_div"></div>
+  </body>
+</html>
+
