--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -15,10 +15,10 @@
           [{'v':'Victor', 'f':'Victor<div style="color:red; font-style:italic">Roi du pétrole</div>'},
            '', 'Roi du pétrole'],
           [{'v':'Tom le Zer', 'f':'Tom le Zer<div style="color:blue; font-style:italic">Roi des femmes</div>'},
-           'victor', 'Roi des femmes'],
-          ['Stanislas', 'Victor', ''],
-          ['Bob', 'Jim', 'Bob Sponge'],
-          ['Carol', 'Bob', '']
+           'Willy le fourbe', 'Roi des femmes'],
+          ['Stanislas', 'Victor', '']
+            [{'v':'Stanislas le vrai', 'f':'Stanou<div style="color:green; font-style:italic">Roi des jeux d'argents</div>'},
+           'Willy le fourbe', 'Roi des femmes'],
         ]);
 
         // Create the chart.
