--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -18,7 +18,7 @@
            'Willy le fourbe', 'Roi des femmes'],
           ['Stanislas', 'Victor', '']
             [{'v':'Stanislas le vrai', 'f':'Stanou<div style="color:green; font-style:italic">Roi des jeux d'argents</div>'},
-           'Willy le fourbe', 'Roi des femmes'],
+           'Willy le fourbe', 'Roi des femmes']
         ]);
 
         // Create the chart.
