--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,8 +30,8 @@
             border-radius: 4px;
         }
         input[type=submit] {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #FFD700;
+            color: blue;
             padding: 14px 20px;
             margin: 10px 0;
             border: none;
@@ -39,19 +39,19 @@
             cursor: pointer;
         }
         input[type=submit]:hover {
-            background-color: #45a049;
+            background-color: #FFD700;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Formulaire de contact</h2>
+        <h2>Contactez moi !</h2>
         <form action="" method="post">
-            <label for="nom">Nom :</label>
-            <input type="text" id="nom" name="nom" placeholder="Votre nom...">
-
             <label for="prenom">Prénom :</label>
             <input type="text" id="prenom" name="prenom" placeholder="Votre prénom...">
+
+            <label for="nom">Nom :</label>
+            <input type="text" id="nom" name="nom" placeholder="Votre nom...">
 
             <label for="message">Message :</label>
             <textarea id="message" name="message" placeholder="Votre message..." style="height:200px"></textarea>
